--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-streamlit
-pandas
-numpy
-scikit-learn
-Pillow
-pickle-mixin
+streamlit==1.35.0
+pickle-mixin==1.0.2
+pandas==1.5.3
+numpy==1.23.3
+scikit-learn==1.2.2
+Pillow==9.4.0
+
